bindings/c/whiteout_m2.h

typedef struct whiteout_M2Batch whiteout_M2Batch;
typedef struct whiteout_M2ShadowBatch whiteout_M2ShadowBatch;
/* ── M2Batch ─────────────────────────────────────────────── */

whiteout_M2Batch* whiteout_m2_M2Batch_new(void);
void whiteout_m2_M2Batch_delete(whiteout_M2Batch* self);
uint8_t whiteout_m2_M2Batch_get_flags(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_flags(whiteout_M2Batch* self, uint8_t value);
int8_t whiteout_m2_M2Batch_get_priorityPlane(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_priorityPlane(whiteout_M2Batch* self, int8_t value);
uint16_t whiteout_m2_M2Batch_get_shaderId(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_shaderId(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_skinSectionIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_skinSectionIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_geosetIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_geosetIndex(whiteout_M2Batch* self, uint16_t value);
int16_t whiteout_m2_M2Batch_get_colorIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_colorIndex(whiteout_M2Batch* self, int16_t value);
uint16_t whiteout_m2_M2Batch_get_materialIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_materialIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_materialLayer(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_materialLayer(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureCount(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureCount(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureCoordComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureCoordComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureWeightComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureWeightComboIndex(whiteout_M2Batch* self, uint16_t value);
uint16_t whiteout_m2_M2Batch_get_textureTransformComboIndex(const whiteout_M2Batch* self);
void whiteout_m2_M2Batch_set_textureTransformComboIndex(whiteout_M2Batch* self, uint16_t value);
/* ── M2ShadowBatch ─────────────────────────────────────────────── */

whiteout_M2ShadowBatch* whiteout_m2_M2ShadowBatch_new(void);
void whiteout_m2_M2ShadowBatch_delete(whiteout_M2ShadowBatch* self);
uint8_t whiteout_m2_M2ShadowBatch_get_flags(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_flags(whiteout_M2ShadowBatch* self, uint8_t value);
uint8_t whiteout_m2_M2ShadowBatch_get_flags2(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_flags2(whiteout_M2ShadowBatch* self, uint8_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_unknown0(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_unknown0(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_submeshId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_submeshId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_textureId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_textureId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_colorId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_colorId(whiteout_M2ShadowBatch* self, uint16_t value);
uint16_t whiteout_m2_M2ShadowBatch_get_transparencyId(const whiteout_M2ShadowBatch* self);
void whiteout_m2_M2ShadowBatch_set_transparencyId(whiteout_M2ShadowBatch* self, uint16_t value);