bindings/java/src/main/java/whiteout/m2/internal/Native.java


    // -- M2Batch --
    public static final MethodHandle whiteout_m2_M2Batch_new = find(
        "whiteout_m2_M2Batch_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_delete = find(
        "whiteout_m2_M2Batch_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_get_flags = find("whiteout_m2_M2Batch_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_flags = find("whiteout_m2_M2Batch_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2Batch_get_priorityPlane = find("whiteout_m2_M2Batch_get_priorityPlane", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_priorityPlane = find("whiteout_m2_M2Batch_set_priorityPlane", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2Batch_get_shaderId = find("whiteout_m2_M2Batch_get_shaderId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_shaderId = find("whiteout_m2_M2Batch_set_shaderId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_skinSectionIndex = find("whiteout_m2_M2Batch_get_skinSectionIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_skinSectionIndex = find("whiteout_m2_M2Batch_set_skinSectionIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_geosetIndex = find("whiteout_m2_M2Batch_get_geosetIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_geosetIndex = find("whiteout_m2_M2Batch_set_geosetIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_colorIndex = find("whiteout_m2_M2Batch_get_colorIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_colorIndex = find("whiteout_m2_M2Batch_set_colorIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_materialIndex = find("whiteout_m2_M2Batch_get_materialIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_materialIndex = find("whiteout_m2_M2Batch_set_materialIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_materialLayer = find("whiteout_m2_M2Batch_get_materialLayer", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_materialLayer = find("whiteout_m2_M2Batch_set_materialLayer", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_textureCount = find("whiteout_m2_M2Batch_get_textureCount", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_textureCount = find("whiteout_m2_M2Batch_set_textureCount", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_textureComboIndex = find("whiteout_m2_M2Batch_get_textureComboIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_textureComboIndex = find("whiteout_m2_M2Batch_set_textureComboIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_textureCoordComboIndex = find("whiteout_m2_M2Batch_get_textureCoordComboIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_textureCoordComboIndex = find("whiteout_m2_M2Batch_set_textureCoordComboIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_textureWeightComboIndex = find("whiteout_m2_M2Batch_get_textureWeightComboIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_textureWeightComboIndex = find("whiteout_m2_M2Batch_set_textureWeightComboIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2Batch_get_textureTransformComboIndex = find("whiteout_m2_M2Batch_get_textureTransformComboIndex", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2Batch_set_textureTransformComboIndex = find("whiteout_m2_M2Batch_set_textureTransformComboIndex", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));

    // -- M2ShadowBatch --
    public static final MethodHandle whiteout_m2_M2ShadowBatch_new = find(
        "whiteout_m2_M2ShadowBatch_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_delete = find(
        "whiteout_m2_M2ShadowBatch_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_flags = find("whiteout_m2_M2ShadowBatch_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_flags = find("whiteout_m2_M2ShadowBatch_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_flags2 = find("whiteout_m2_M2ShadowBatch_get_flags2", FunctionDescriptor.of(ValueLayout.JAVA_BYTE, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_flags2 = find("whiteout_m2_M2ShadowBatch_set_flags2", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_BYTE));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_unknown0 = find("whiteout_m2_M2ShadowBatch_get_unknown0", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_unknown0 = find("whiteout_m2_M2ShadowBatch_set_unknown0", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_submeshId = find("whiteout_m2_M2ShadowBatch_get_submeshId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_submeshId = find("whiteout_m2_M2ShadowBatch_set_submeshId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_textureId = find("whiteout_m2_M2ShadowBatch_get_textureId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_textureId = find("whiteout_m2_M2ShadowBatch_set_textureId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_colorId = find("whiteout_m2_M2ShadowBatch_get_colorId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_colorId = find("whiteout_m2_M2ShadowBatch_set_colorId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_get_transparencyId = find("whiteout_m2_M2ShadowBatch_get_transparencyId", FunctionDescriptor.of(ValueLayout.JAVA_SHORT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_m2_M2ShadowBatch_set_transparencyId = find("whiteout_m2_M2ShadowBatch_set_transparencyId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_SHORT));
